register background whitespace fixed (sorta)

--- a/css/styleLogin.css
+++ b/css/styleLogin.css
@@ -166,7 +166,8 @@ figure {
 
 img {
   vertical-align: middle;
-  border-style: none; }
+  border-style: none;
+}
 
 svg {
   overflow: hidden;
